fix z-index v hamburgru

--- a/styles/header_index.css
+++ b/styles/header_index.css
@@ -214,6 +214,7 @@ menu{
         width: 100%;
         padding: 1em;
         gap: 1em;
+        z-index: 1;
         transition: left 0.5s;
     }
     menu[class$=active] {
